Fix: Session icon alignment. Fix: i18n blocked messages / users.

--- a/src/pages/settings/panes/Panes.module.scss
+++ b/src/pages/settings/panes/Panes.module.scss
@@ -354,9 +354,11 @@
             display: flex;
             gap: 12px;
             flex-grow: 1;
+            
+            svg {
+                vertical-align: auto;
+            }
         }
-
-        
     }
 
     .entry {
